--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -117,7 +117,7 @@
   "pictureLabel": "Picture",
   "portraitLabel": "Portrait",
   "postLabel": "Posts",
-  "priceUnitLabel": "Price unit",
+  "priceUnitLabel": "Category",
   "privacyLabel": "Privacy Policy",
   "productListLabel": "List of products",
   "productPriceLabel": "Unit price",
@@ -195,5 +195,6 @@
   "idCardLabel": "ID Card Number",
   "imageCardLabel": "ID Card Image",
   "bioLabel": "Your slogan",
-  "idImgRequiredLabel": "You have to take a photo of your font id card"
+  "idImgRequiredLabel": "You have to take a photo of your font id card",
+  "failLabel": "Fail"
 }
