refactor: fix a bug that services & service count not update

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -217,5 +217,7 @@
   "sureLabel": "Are you sure?",
   "delProductLabel": "This product's data will be deleted",
   "delServiceLabel": "This service's data will be deleted",
-  "updateServiceLabel": "Update Service"
+  "updateServiceLabel": "Update Service",
+  "repairLocationLabel": "Repair Location",
+  "currentLocationLabel": "Current Location"
 }
