--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -226,5 +226,7 @@
   "updateProfileFail": "Cập nhật tài khoản lỗi vui lòng thử lại",
   "languageLabel": "Ngôn ngữ",
   "vietnameseLabel": "Tiếng Việt",
-  "englishLabel": "Tiếng Anh"
+  "englishLabel": "Tiếng Anh",
+  "accountNotActiveLabel": "Tài khoản của bạn chưa được kích hoạt.",
+  "canLoginLabel": "Bạn vẫn có thể đăng nhập nhưng khách hàng sẽ không tìm thấy bạn."
 }
