--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -217,5 +217,10 @@
   "sureLabel": "Are you sure?",
   "delProductLabel": "This product's data will be deleted",
   "delServiceLabel": "This service's data will be deleted",
-  "updateServiceLabel": "Update Service"
+  "updateServiceLabel": "Update Service",
+  "repairLocationLabel": "Repair Location",
+  "currentLocationLabel": "Current Location",
+  "locationDeniedLabel": "Revup needs your location so customers can find your services more easily",
+  "enableLocationLabel": "Allow location access",
+  "chooseAtLeastCompletedLabel": "Choose at least one service"
 }
