--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -189,7 +189,7 @@
   "enterPhoneNumberLabel": "Nhập số điện thoại của bạn để tiếp tục",
   "toomanyReqLabel": "Bạn đã yêu cầu gửi OTP quá nhiều lần, vui lòng đợi thêm",
   "idCardLabel": "Số cmnd hoặc cccd",
-  "imageCardLabel": "Ảnh cmnd hoặc cccd",
+  "imageCardLabel": "Ảnh giấy phép kinh doanh",
   "bioLabel": "Câu nói yêu thích của bạn",
   "feeOfTransportLabel": "Phí di chuyển",
   "acceptLabel": "Chấp nhận",
@@ -197,14 +197,13 @@
   "repairItemsLabel": "hạng mục",
   "repairRequestSkipLabel": "Xác nhận bỏ qua yêu cầu sửa chữa này?",
   "needPriceQuotationLabel": "Cần báo giá",
-  "idImgRequiredLabel": "Bạn hãy chụp ảnh mặt trước cmnd hoặc cccd của bạn",
+  "idImgRequiredLabel": "Bạn hãy chụp ảnh giấy phép kinh doanh của bạn",
   "providerArrivedLabel": "Tôi đã đến nơi",
   "startRepairLabel": "Bắt đầu sửa chữa",
   "underRepairLabel": "Đang sửa chữa",
   "notIncludeProductPriceLabel": "Chi phí ở đây chỉ là phí dịch vụ chưa bao gồm giá sản phẩm",
   "touchToQuoteLabel": "Chạm để nhập giá",
   "enterPriceLabel": "Nhập giá",
-  "idImgRequiredLabel": "Bạn hãy chụp ảnh mặt trước cmnd hoặc cccd của bạn",
   "failLabel": "Thất bại",
   "productInfoLabel": "Thông tin sản phẩm",
   "productName": "Tên sản phẩm",
