feat: handle message

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -222,5 +222,7 @@
   "currentLocationLabel": "Current Location",
   "locationDeniedLabel": "Revup needs your location so customers can find your services more easily",
   "enableLocationLabel": "Allow location access",
-  "chooseAtLeastCompletedLabel": "Choose at least one service"
+  "chooseAtLeastCompletedLabel": "Choose at least one service",
+  "providerAcceptRequestLabel": "Your repair request has been accepted",
+  "providerDeclineRequestLabel": "The worker declined the request"
 }
