--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -220,5 +220,7 @@
   "currentLocationLabel": "Vị trí hiện tại",
   "locationDeniedLabel": "Revup cần vị trí của bạn để khách hàng có thể tìm kiếm dịch vụ của bạn dễ dàng hơn",
   "enableLocationLabel": "Cho phép truy cập vị trí",
-  "chooseAtLeastCompletedLabel": "Chọn ít nhất một dịch vụ"
+  "chooseAtLeastCompletedLabel": "Chọn ít nhất một dịch vụ",
+  "providerAcceptRequestLabel": "Yêu cầu sửa chữa của bạn đã được chấp nhận",
+  "providerDeclineRequestLabel": "Thợ đã từ chối yêu cầu"
 }
