feat: add change language page, redirect to homepage if user already … (#32)
* refactor: fix a bug that services & service count not update

* refactor: fix bug ui and logic

* refactor: fix bug ui

* refactor: format code

* feat: add change language page, redirect to homepage if user already login, add signout feature, fix some ui issues and logic issues

* refactor: change some login logic

* refactor: format code

* refactor: pull origin main and resolve conflict

* refactor: fix add new service issues

Co-authored-by: cantgim <cantgim@gmail.com>

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -191,7 +191,7 @@
   "enterPhoneNumberLabel": "Enter your phone number to continue",
   "toomanyReqLabel": "You request OTP too many time, please wait before retry",
   "idCardLabel": "ID Card Number",
-  "imageCardLabel": "ID Card Image",
+  "imageCardLabel": "Business Registration Certificate Image",
   "bioLabel": "Your slogan",
   "feeOfTransportLabel": "Fee of transport",
   "acceptLabel": "Accept",
@@ -222,5 +222,13 @@
   "currentLocationLabel": "Current Location",
   "locationDeniedLabel": "Revup needs your location so customers can find your services more easily",
   "enableLocationLabel": "Allow location access",
-  "chooseAtLeastCompletedLabel": "Choose at least one service"
+  "chooseAtLeastCompletedLabel": "Choose at least one service",
+  "loginFailLabel": "Your account is not allowed to login.",
+  "loginFailDescLabel": "Please contact care center for more information.",
+  "updateProfileFail": "Update fail",
+  "languageLabel": "Language",
+  "vietnameseLabel": "Vietnamese",
+  "englishLabel": "English",
+  "accountNotActiveLabel": "Your account has not been active yet.",
+  "canLoginLabel": "You still can login but consumer can not book you."
 }
