refactor: add messaging some page

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -224,5 +224,6 @@
   "enableLocationLabel": "Allow location access",
   "chooseAtLeastCompletedLabel": "Choose at least one service",
   "providerAcceptRequestLabel": "Your repair request has been accepted",
-  "providerDeclineRequestLabel": "The worker declined the request"
+  "providerDeclineRequestLabel": "The worker declined the request",
+  "startMovingLabel": "The repairman has departed"
 }
