--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -222,5 +222,6 @@
   "enableLocationLabel": "Cho phép truy cập vị trí",
   "chooseAtLeastCompletedLabel": "Chọn ít nhất một dịch vụ",
   "providerAcceptRequestLabel": "Yêu cầu sửa chữa của bạn đã được chấp nhận",
-  "providerDeclineRequestLabel": "Thợ đã từ chối yêu cầu"
+  "providerDeclineRequestLabel": "Thợ đã từ chối yêu cầu",
+  "startMovingLabel": "Thợ sửa đã xuất phát"
 }
