--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -233,5 +233,24 @@
   "vietnameseLabel": "Vietnamese",
   "englishLabel": "English",
   "accountNotActiveLabel": "Your account has not been active yet.",
-  "canLoginLabel": "You still can login but consumer can not book you."
+  "canLoginLabel": "You still can login but consumer can not book you.",
+  "analyticLabel": "Analytics",
+  "totalIncome": "Total Income",
+  "incomeAnalytics": "Income Analytics",
+  "transitionAnalytics": "Transition Analytics",
+  "janLabel": "Jan",
+  "febLabel": "Feb",
+  "marLabel": "Mar",
+  "aprLabel": "Apr",
+  "mayLabel":"May",
+  "junLabel": "Jun",
+  "julLabel": "Jul",
+  "augLabel": "Aug",
+  "sepLabel": "Sep",
+  "octLabel": "Oct",
+  "novLabel": "Nov",
+  "decLabel": "Dec",
+  "incomePerMonthLabel": "Income per month",
+  "transPerMonthLabel": "Trans per month",
+  "blsLabel": "Taking an image of Business Lisence is required. This is used to verify your account"
 }
