--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -252,5 +252,13 @@
   "decLabel": "Dec",
   "incomePerMonthLabel": "Income per month",
   "transPerMonthLabel": "Trans per month",
-  "blsLabel": "Taking an image of Business Lisence is required. This is used to verify your account"
+  "blsLabel": "Taking an image of Business Lisence is required. This is used to verify your account",
+  "chooseNoProduct": "You choose no product",
+  "yesLabel": "Yes",
+  "chooseNoService": "You choose no service",
+  "noLabel": "No",
+  "addCommonLabel": "Choose common service",
+  "moneyUnit": "VND",
+  "noServiceLabel": "You have no service yet.",
+  "addCommonServiceQuestionLabel": "Do you want to use common service?"
 }
