--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -250,6 +250,15 @@
   "monthLabel": "Tháng",
   "incomePerMonthLabel": "Thu nhập / tháng",
   "transPerMonthLabel": "Giao dịch / tháng",
-  "blsLabel": "Cung cấp ảnh giấy phép kinh doanh là cần thiết. Đây sẽ là căn cứ giúp chúng tôi xác thực tài khoản của bạn"
+  "blsLabel": "Cung cấp ảnh giấy phép kinh doanh là cần thiết. Đây sẽ là căn cứ giúp chúng tôi xác thực tài khoản của bạn",
+  "chooseNoProduct": "Bạn không chọn sản phẩm nào.",
+  "yesLabel": "Đồng ý",
+  "chooseNoService": "Bạn không chọn dịch vụ nào.",
+  "noLabel": "Không đồng ý",
+  "addCommonLabel": "Chọn dịch vụ mẫu",
+  "moneyUnit": "đ",
+  "noServiceLabel": "Bạn không có dịch vụ nào.",
+  "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?"
+
 
 }
