feat: implement history detail page

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -260,5 +260,6 @@
   "addCommonLabel": "Choose common service",
   "moneyUnit": "VND",
   "noServiceLabel": "You have no service yet.",
-  "addCommonServiceQuestionLabel": "Do you want to use common service?"
+  "addCommonServiceQuestionLabel": "Do you want to use common service?",
+  "successLabel": "Finished"
 }
