--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -258,7 +258,7 @@
   "addCommonLabel": "Chọn dịch vụ mẫu",
   "moneyUnit": "đ",
   "noServiceLabel": "Bạn không có dịch vụ nào.",
-  "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?"
-
+  "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?",
+  "successLabel": "Hoàn thành"
 
 }
