chore: merge main     * hotfix: fix bugs in my list service
    * feat: remove redundant code and get dtos

    * feat: implement history detail page

    * feat: implement history detail page

    * hotfix: fix edit profilepage bug and some other bugs

    * hotfix: fix bugs

    * feat: implement common service

    * feat: implement common service with product

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -254,6 +254,15 @@
   "transPerMonthLabel": "Trans per month",
   "monthLabel": "month",
   "blsLabel": "Taking an image of Business Lisence is required. This is used to verify your account",
+  "chooseNoProduct": "You choose no product",
+  "yesLabel": "Yes",
+  "chooseNoService": "You choose no service",
+  "noLabel": "No",
+  "addCommonLabel": "Choose common service",
+  "moneyUnit": "VND",
+  "noServiceLabel": "You have no service yet.",
+  "addCommonServiceQuestionLabel": "Do you want to use common service?",
+  "successLabel": "Finished",
   "userDismissed": "User aborted the request, you will get moving fees as compensation ",
   "notSupportLabel": "We currently don't support this feature. We will release soon"
  
