--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -251,6 +251,15 @@
   "incomePerMonthLabel": "Thu nhập / tháng",
   "transPerMonthLabel": "Giao dịch / tháng",
   "blsLabel": "Cung cấp ảnh giấy phép kinh doanh là cần thiết. Đây sẽ là căn cứ giúp chúng tôi xác thực tài khoản của bạn",
+  "chooseNoProduct": "Bạn không chọn sản phẩm nào.",
+  "yesLabel": "Đồng ý",
+  "chooseNoService": "Bạn không chọn dịch vụ nào.",
+  "noLabel": "Không đồng ý",
+  "addCommonLabel": "Chọn dịch vụ mẫu",
+  "moneyUnit": "đ",
+  "noServiceLabel": "Bạn không có dịch vụ nào.",
+  "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?",
+  "successLabel": "Hoàn thành",
   "userDismissed": "Người dùng đã hủy bỏ yêu cầu, bạn sẽ nhận được phí di chuyển như một khoản bồi thường",
   "notSupportLabel": "Chúng tôi hiện không hỗ trợ tính năng này. Chúng tôi sẽ phát hành sớm"
 }
