feat: fix racing condition         * hotfix: fix bugs in my list service
        * feat: remove redundant code and get dtos

        * feat: implement history detail page

        * feat: implement history detail page

        * hotfix: fix edit profilepage bug and some other bugs

        * hotfix: fix bugs

        * feat: implement common service

        * feat: implement common service with product

--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -259,6 +259,7 @@
   "moneyUnit": "đ",
   "noServiceLabel": "Bạn không có dịch vụ nào.",
   "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?",
-  "successLabel": "Hoàn thành"
-
+  "successLabel": "Hoàn thành",
+  "userDismissed": "Người dùng đã hủy bỏ yêu cầu, bạn sẽ nhận được phí di chuyển như một khoản bồi thường",
+  "notSupportLabel": "Chúng tôi hiện không hỗ trợ tính năng này. Chúng tôi sẽ phát hành sớm"
 }
