--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -252,6 +252,7 @@
   "decLabel": "Dec",
   "incomePerMonthLabel": "Income per month",
   "transPerMonthLabel": "Trans per month",
+  "monthLabel": "month",
   "blsLabel": "Taking an image of Business Lisence is required. This is used to verify your account",
   "chooseNoProduct": "You choose no product",
   "yesLabel": "Yes",
@@ -261,5 +262,8 @@
   "moneyUnit": "VND",
   "noServiceLabel": "You have no service yet.",
   "addCommonServiceQuestionLabel": "Do you want to use common service?",
-  "successLabel": "Finished"
+  "successLabel": "Finished",
+  "userDismissed": "User aborted the request, you will get moving fees as compensation ",
+  "notSupportLabel": "We currently don't support this feature. We will release soon"
+ 
 }
