hotfix: fix home page bugs

--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -45,7 +45,7 @@
   "dayLabel": "Ngày",
   "dealsForYouLabel": "Ưu đãi dành cho bạn",
   "detailLabel": "Chi tiết",
-  "discoverNowLabel": "Khám phá ngay bây giờ",
+  "discoverNowLabel": "Khám phá ngay",
   "distanceLabel": "Khoảng cách",
   "doneLabel": "Xong",
   "editProfileLabel": "Chỉnh sửa hồ sơ",
