Feature/search product service (#47)
* feat: implement search feature for service management

* feature: implement search product page

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -262,6 +262,13 @@
   "moneyUnit": "VND",
   "noServiceLabel": "You have no service yet.",
   "addCommonServiceQuestionLabel": "Do you want to use common service?",
+  "resultForLabel": "Results for",
+  "resultCountLabel": "founds",
+  "notFoundLabel": "Not Found",
+  "recentLabel": "Recent",
+  "clearAllLabel": "Clear all",
+  "searchLabel": "Search...",
+  "searchServiceOrProduct": "Search your service or product",
   "successLabel": "Finished",
   "userDismissed": "User aborted the request, you will get moving fees as compensation ",
   "notSupportLabel": "We currently don't support this feature. We will release soon"
