--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -259,6 +259,13 @@
   "moneyUnit": "đ",
   "noServiceLabel": "Bạn không có dịch vụ nào.",
   "addCommonServiceQuestionLabel": "Bạn có muốn sử dụng dịch vụ mẫu không?",
+  "resultForLabel": "Kết quả cho",
+  "resultCountLabel": "kết quả",
+  "notFoundLabel": "Không tìm thấy",
+  "recentLabel": "Gần đây",
+  "clearAllLabel": "Xoá tất cả",
+  "searchLabel": "Tìm kiếm...",
+  "searchServiceOrProduct": "Tìm kiếm dịch vụ hoặc sản phẩm của bạn",
   "successLabel": "Hoàn thành",
   "userDismissed": "Người dùng đã hủy bỏ yêu cầu, bạn sẽ nhận được phí di chuyển như một khoản bồi thường",
   "notSupportLabel": "Chúng tôi hiện không hỗ trợ tính năng này. Chúng tôi sẽ phát hành sớm"
