fix: fix listen to canceled order (#48)

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -242,7 +242,7 @@
   "febLabel": "Feb",
   "marLabel": "Mar",
   "aprLabel": "Apr",
-  "mayLabel":"May",
+  "mayLabel": "May",
   "junLabel": "Jun",
   "julLabel": "Jul",
   "augLabel": "Aug",
@@ -271,6 +271,6 @@
   "searchServiceOrProduct": "Search your service or product",
   "successLabel": "Finished",
   "userDismissed": "User aborted the request, you will get moving fees as compensation ",
-  "notSupportLabel": "We currently don't support this feature. We will release soon"
- 
+  "notSupportLabel": "We currently don't support this feature. We will release soon",
+  "consumerAbortLabel": "Order has been canceled"
 }
