--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -272,5 +272,6 @@
   "successLabel": "Finished",
   "userDismissed": "User aborted the request, you will get moving fees as compensation ",
   "notSupportLabel": "We currently don't support this feature. We will release soon",
-  "consumerAbortLabel": "Order has been canceled"
+  "consumerAbortLabel": "Order has been canceled",
+  "availableLabel": "Available"
 }
