Revert "Feature/active service product (#49)"
This reverts commit b7130a252494827e7d343d9bae50c08a192d7a18.

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -272,6 +272,5 @@
   "successLabel": "Finished",
   "userDismissed": "User aborted the request, you will get moving fees as compensation ",
   "notSupportLabel": "We currently don't support this feature. We will release soon",
-  "consumerAbortLabel": "Order has been canceled",
-  "availableLabel": "Available"
+  "consumerAbortLabel": "Order has been canceled"
 }
