--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -270,5 +270,6 @@
   "userDismissed": "Người dùng đã hủy bỏ yêu cầu, bạn sẽ nhận được phí di chuyển như một khoản bồi thường",
   "notSupportLabel": "Chúng tôi hiện không hỗ trợ tính năng này. Chúng tôi sẽ phát hành sớm",
   "consumerAbortLabel": "Đơn hàng đã bị huỷ",
-  "availableLabel": "Khả dụng"
+  "availableLabel": "Khả dụng",
+  "unknownFailureLabel": "Rất tiếc, có lỗi xảy ra"
 }
