--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -273,5 +273,8 @@
   "userDismissed": "User aborted the request, you will get moving fees as compensation ",
   "notSupportLabel": "We currently don't support this feature. We will release soon",
   "consumerAbortLabel": "Order has been canceled",
-  "availableLabel": "Available"
+  "availableLabel": "Available",
+  "needToUpdateInfoLabel": "Your information may not match. Please reupload your infomation (include business lisence).",
+  "needToUpdateInfoDesLabel": "That is the basis for your account to be approved in the fastest way",
+  "understoodLabel": "Understood"
 }
