--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -282,6 +282,8 @@
   "duplicateNameSvLabel": "Tên dịch vụ không được phép để trùng",
   "addCommonLabel": "Thêm dịch vụ mẫu",
   "hoursAgoLabel" : "giờ trước",
-  "todayLabel":"hôm nay"
+  "todayLabel":"hôm nay",
+  "bannedNotiLabel": "Bạn đã bị cấm cho tới ngày",
+  "bannedNoti2Label": "Vì đã vi phạm các tiêu chí của chúng tôi"
 
 }
