fix: fix bug quote price

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -284,7 +284,8 @@
   "understoodLabel": "Understood",
   "duplicateNameSvLabel": "Service name is not allowed to duplicate",
   "addCommonLabel": "Add common services",
-  "hoursAgoLabel" : "hours ago",
-  "todayLabel":"today"
-
+  "hoursAgoLabel": "hours ago",
+  "todayLabel": "today",
+  "backToHomePageLabel": "Back to Home Page",
+  "walletLabel": "Wallet"
 }
