--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -281,7 +281,8 @@
   "unknownFailureLabel": "Rất tiếc, có lỗi xảy ra",
   "duplicateNameSvLabel": "Tên dịch vụ không được phép để trùng",
   "addCommonLabel": "Thêm dịch vụ mẫu",
-  "hoursAgoLabel" : "giờ trước",
-  "todayLabel":"hôm nay"
-
+  "hoursAgoLabel": "giờ trước",
+  "todayLabel": "hôm nay",
+  "backToHomePageLabel": "Trở về trang chủ",
+  "walletLabel": "Wallet"
 }
