Hotfix/push notification (#72)
* fix: ui list service and realtime update

* fix: map not fit polyline

* fix: submit completed service

* fix: fix completed service

* fix: fix bug quote price

* refactor: resolve conflict

--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -281,9 +281,10 @@
   "unknownFailureLabel": "Rất tiếc, có lỗi xảy ra",
   "duplicateNameSvLabel": "Tên dịch vụ không được phép để trùng",
   "addCommonLabel": "Thêm dịch vụ mẫu",
-  "hoursAgoLabel" : "giờ trước",
-  "todayLabel":"hôm nay",
+  "hoursAgoLabel": "giờ trước",
+  "todayLabel": "hôm nay",
+  "backToHomePageLabel": "Trở về trang chủ",
+  "walletLabel": "Wallet",
   "bannedNotiLabel": "Bạn đã bị cấm cho tới ngày",
   "bannedNoti2Label": "Vì đã vi phạm các tiêu chí của chúng tôi"
-
 }
