--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -284,9 +284,10 @@
   "understoodLabel": "Understood",
   "duplicateNameSvLabel": "Service name is not allowed to duplicate",
   "addCommonLabel": "Add common services",
-  "hoursAgoLabel" : "hours ago",
-  "todayLabel":"today",
+  "backToHomePageLabel": "Back to Home Page",
+  "walletLabel": "Wallet",
+  "hoursAgoLabel": "hours ago",
+  "todayLabel": "today",
   "bannedNotiLabel": "You had been banned until",
   "bannedNoti2Label": "due to violate our term and privacy"
-
 }
