--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -289,5 +289,10 @@
   "hoursAgoLabel": "hours ago",
   "todayLabel": "today",
   "bannedNotiLabel": "You had been banned until",
-  "bannedNoti2Label": "due to violate our term and privacy"
+  "bannedNoti2Label": "due to violate our term and privacy",
+  "cancelThisLabel": "If you cancel this order you can not take any of transit fee",
+  "selectedProductLabel": "Consumer selected products. Please take a look and confirm to start repair",
+  "cancelByUserLabel": "User aborted the request. We will take action on violated request",
+  "sorryLabel": "We are very sorry for that"
+
 }
