--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -288,7 +288,7 @@
   "bannedNotiLabel": "Bạn đã bị cấm cho tới ngày",
   "bannedNoti2Label": "Vì đã vi phạm các tiêu chí của chúng tôi",
   "cancelThisLabel": "Nếu bạn huỷ giao dịch này phí di chuyển sẽ không được thanh toán",
-  "selectedProductLabel": "Khách đã chọn sản phẩm. Hãy xem qua và xác nhận để bắt đầu sửa chữa",
+  "selectedProductLabel": "Khách đã chọn sản phẩm. Hãy xem qua và xác nhận để bắt đầu",
   "cancelByUserLabel": "Khách đã huỷ yêu cầu. Chúng tôi sẽ trừng phạt những người dùng cố ý vi phạm bằng cách spam yêu cầu",
   "sorryLabel": "Chúng tôi rất xin lỗi về việc này"
 
