--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -293,6 +293,8 @@
   "cancelThisLabel": "If you cancel this order you can not take any of transit fee",
   "selectedProductLabel": "Consumer selected products. Please take a look and confirm then start",
   "cancelByUserLabel": "User aborted the request. We will take action on violated request",
-  "sorryLabel": "We are very sorry for that"
+  "sorryLabel": "We are very sorry for that",
+  "arrivedStartWorkingLabel":"Arrived? let's start repairing now",
+  "consumerPaidLabel": "Consumer paided! Let's finish now"
 
 }
