--- a/lib/l10n/arb/app_vi.arb
+++ b/lib/l10n/arb/app_vi.arb
@@ -290,6 +290,8 @@
   "cancelThisLabel": "Nếu bạn huỷ giao dịch này phí di chuyển sẽ không được thanh toán",
   "selectedProductLabel": "Khách đã chọn sản phẩm. Hãy xem qua và xác nhận để bắt đầu",
   "cancelByUserLabel": "Khách đã huỷ yêu cầu. Chúng tôi sẽ trừng phạt những người dùng cố ý vi phạm bằng cách spam yêu cầu",
-  "sorryLabel": "Chúng tôi rất xin lỗi về việc này"
+  "sorryLabel": "Chúng tôi rất xin lỗi về việc này",
+  "arrivedStartWorkingLabel":"Đến rồi thì bắt tay vào việc thôi",
+  "consumerPaidLabel": "Khách đã thanh toán. Kết thúc giao dịch thôi"
 
 }
